--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		document.documentElement.className = 'js';
 	</script>
 
-	<title>Ganymade Chain&#039;s</title>
+	<title>Ganymade Chain Scam&#039;s</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel="alternate" type="application/rss+xml" title="Official OG Blockchain &raquo; Feed" href="https://officialogblockchain.site/?feed=rss2" />
